<resources>
    <!--menu-->
    <string name="app_name">Succulents meet U</string>
    <string name="splash_app_name">多肉遇见你</string>
    <string name="app_summary">"Your Garden on the Cloud!"</string>
    <string name="splash_app_desc">"- Your Garden on the Cloud"</string>
    <string name="title_my_garden">"My Garden"</string>
    <string name="title_moments">"Moments"</string>
    <string name="title_crazy">"Discover"</string>
    <string-array name="str_my_gardens">
        <item>Notes</item>
        <item>Miniascape</item>
    </string-array>
    <string-array name="str_crazys">
        <item>QA</item>
    </string-array>
    <string name="str_login">Login</string>
    <string name="str_notices">Notifications</string>
    <string name="str_settings">Settings</string>
    <string name="str_feedback">Help App Improvement</string>
    <string name="str_finish_feedback">Thank you for your feedback</string>
    <!--General -->
    <string name="str_null"></string>
    <string name="str_commit">Submit</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_close">Close</string>
    <string name="str_delete">Delete</string>
    <string name="str_undo">Undo</string>
    <string name="str_network_error">The network is running away</string>
    <string name="str_save_success">Save successful</string>
    <string name="str_save_failed">Save failed</string>
    <string name="str_qa_submit_successful">Submit successful</string>
    <string name="str_qa_submit_failed">Submit failed</string>
    <string name="str_no_data">No data obtained</string>
    <string name="str_no_more_data">No more data</string>
    <string name="str_all_show">In the end~</string>
    <string name="str_is_loading">Loading</string>
    <string name="str_load_faild">Load failed, please click to reload</string>
    <string name="str_network_error_retry">The network is not strong, please pull down and try again</string>
    <string name="str_delete_confirm">Confirm delete</string>
    <string name="str_content_empty">No content to submit</string>
    <string name="str_commit_empty">No content to submit</string>
    <string name="str_second_ago">Just</string>
    <string name="str_minute_ago">" minutes ago"</string>
    <string name="str_hour_ago">" hours ago"</string>
    <string name="str_yesterday">"Yesterday "</string>
    <string name="str_day_ago">" days ago "</string>
    <string name="str_failed">" failed"</string>
    <string name="str_successful">" successful"</string>
    <string name="str_upload_over_length">Upload size exceeds limit</string>
    <string name="str_upload_empty">Upload content is empty</string>
    <string name="str_upload_failed">Upload failed</string>
    <string name="str_upload_pic">Upload image</string>
    <string name="str_upload_pic_failed">" failed,"</string>
    <string-array name="str_photochoose">
        <item>Photograph</item>
        <item>Select from album</item>
    </string-array>
    <string-array name="str_image_options">
        <item>Save Image</item>
    </string-array>
    <!-- login -->
    <string name="prompt_email">Please enter Email</string>
    <string name="prompt_password">Please enter the password</string>
    <string name="prompt_password_again">Please enter the password again</string>
    <string name="action_sign_in">Login</string>
    <string name="str_register">Register</string>
    <string name="str_register_tips">Tips: Please use real email to register, in order to retrieve the password</string>
    <string name="str_logout">Logout</string>
    <string name="str_forget_pw">Forgot password</string>
    <string name="str_send_code">send verification code</string>
    <string name="str_input_code">Please enter the verification code received</string>
    <string name="prompt_new_password">Please enter a new password</string>
    <string name="prompt_new_password_again">Please enter the new password again</string>
    <string name="str_set_new_pwd">Reset password</string>
    <string name="str_set_new_pwd_successful">Reset password successful</string>
    <string name="error_code_empty">Verification code can not be empty</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Email format is incorrect</string>
    <string name="error_invalid_password">Password enter at least 6 digits</string>
    <string name="error_password_not_same">The two passwords you entered did not match</string>
    <string name="error_incorrect_password">The password is incorrect</string>
    <string name="error_field_required">Email can not be empty</string>
    <string name="str_user_edit">Modify personal information</string>
    <string name="prompt_nickname">Your Nickname</string>
    <string name="prompt_region">Your Area</string>
    <string name="str_edit_submit">submit modification</string>
    <string name="str_edit_password"> modify password</string>
    <string name="str_code_sended">Verification code sent</string>
    <string name="str_second"> s</string>
    <string name="str_register_failed">Registration failed</string>
    <string name="str_login_failed">Login failed</string>
    <string name="str_register_successful">Registration successful</string>
    <string name="str_login_successful">Login successful</string>
    <string name="str_user_edit_successful">Modify personal information successful</string>
    <string name="str_user_edit_failed">Failed to modify personal information</string>
    <string name="str_edit_avatar">Modify avatar</string>
    <string name="str_upload_avatar_failed">Failed to upload avatar,</string>
    <string name="str_quick_login">Quick Login</string>
    <string name="str_qq_login_failed">QQ Login failed</string>
    <!--Notes-->
    <string name="str_self">Private</string>
    <string name="str_public">Public</string>
    <string name="str_edit_title">Modify title</string>
    <string name="str_hint_edit_title">Edit the title here (no more than 15 words)</string>
    <string name="str_hint_title">Write down the title of the note here</string>
    <string name="str_hint_body">Write a growth note here</string>
    <string name="str_hint_pic_title">Say something</string>
    <string name="str_user_moments_empty">The owner has not yet make the garden public!</string>
    <string name="str_diary_empty">Click on the bottom right corner to record the first succulent!</string>
    <string name="str_landscaping_empty">Click on the bottom right corner to add your
        landscaping picture!</string>
    <string name="str_moments_empty">There is no owner to make the garden public! \n Go to
         make my garden public?</string>
    <string name="str_note_deleted">A note has been deleted</string>
    <string name="str_title_empty">Title cannot be empty</string>
    <string name="str_add_note">Add notes</string>
    <string name="str_add_note_item">Add a note item</string>
    <string name="str_edit_note_item">Edit note item</string>
    <string name="str_change_permission">modify the visible range</string>
    <string name="str_upload_cover_failed">Failed to upload cover</string>
    <string name="str_edit_cover">Modify cover</string>

    <!--Q&A-->
    <string name="str_ask">Question</string>
    <string name="str_answer">answer</string>
    <string name="str_hint_ask">Write your question here</string>
    <string name="str_qa_detail">QA details</string>
    <string name="str_expand">Full</string>
    <string name="fold">Fold</string>
    <string name="str_answer_length_tip">Enter up to 3000 words, the long part has been ignored</string>
    <string name="str_answer_deleted">An answer has been deleted</string>
    <string name="str_question_deleted">A question has been deleted</string>
    <string name="str_qa_empty">No one has asked questions yet! \nClick on the bottom right corner to ask the first person?</string>
    <string name="str_answer_empty">No one has answered yet~\n answer it?</string>
    <string name="str_question_empty">The problem cannot be empty</string>

    <!--Other-->
    <string name="str_setting_update">Check for updates</string>
    <string name="str_setting_about">About</string>
    <string name="str_version">current version: </string>
    <string name="str_latest_ver">Currently is the latest version</string>
    <string name="str_new_version">Found a new version: </string>
    <string name="str_update_now">Upgrade now</string>
    <string name="str_downloading">Downloading</string>
    <string name="str_download_complete">Download completed</string>
    <string name="str_download_failed">Download failed</string>
    <string name="str_add_feedback">Submit feedback</string>
    <string name="prompt_feedback">What do you want to say about the app? (within 300 words)</string>
    <string name="str_about_tips">If you have any suggestions for the app, welcome to
        feedback in \"Help App Improvement\"</string>
    <string name="str_notice_empty">No notifications yet</string>
    <string name="str_back_again">Press again to exit the application</string>
    <string name="str_search">Search</string>
</resources>
