<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              tools:context=".activity.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimary"
        android:theme="@style/Dark_ActionBar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/tv_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textSize="14dp"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <com.mojota.succulent.view.PasswordView
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.mojota.succulent.view.PasswordView
                android:id="@+id/et_password_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <Button
                android:id="@+id/bt_login"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/action_sign_in"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/bt_register"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/str_register"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_tips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/str_register_tips"
                android:visibility="gone"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:drawableLeft="@drawable/ic_hori_line"
                android:drawableRight="@drawable/ic_hori_line"
                android:gravity="center"
                android:text="@string/str_quick_login"
                android:textSize="13dp"/>

            <ImageButton
                android:id="@+id/bt_qq_login"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_qq"
                android:scaleType="centerInside"
                android:padding="8dp"
                android:background="@drawable/ic_bg_qq_selector"
                android:layout_marginTop="12dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>