<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="450dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/bt_close"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="right"
            android:background="@mipmap/ic_close"
            android:backgroundTint="@color/colorAccent"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:hint="@string/str_hint_pic_title"
                android:lines="2"
                android:maxLength="100"
                android:textSize="15dp"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/ibt_pic1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:background="@drawable/bg_add"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_add_white_48dp"/>

            <ImageView
                android:id="@+id/ibt_pic2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:background="@drawable/bg_add"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_add_white_48dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/ibt_pic3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:background="@drawable/bg_add"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_add_white_48dp"/>

            <ImageView
                android:id="@+id/ibt_pic4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:background="@drawable/bg_add"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_add_white_48dp"/>
        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/str_public"/>

        <Button
            android:id="@+id/bt_commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/str_commit"
            android:textColor="@android:color/white"
            android:textSize="16dp"/>

    </LinearLayout>
</ScrollView>